--- a/package.json
+++ b/package.json
@@ -1,27 +1,22 @@
 {
-  "name": "zportal-frontend-project",
-  "version": "1.0.0",
-  "description": "This is the zillion's job portal frontend Application",
-  "main": "index.js",
+  "name": "zportal-frontend",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "next",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mmsesay/zportal-frontend.git"
-  },
-  "keywords": [],
-  "author": "Zillions dev team",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/mmsesay/zportal-frontend/issues"
-  },
-  "homepage": "https://github.com/mmsesay/zportal-frontend#readme",
   "dependencies": {
-    "next": "^9.0.5",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "@zeit/next-css": "^1.0.1",
+    "next": "9.0.5",
+    "react": "16.9.0",
+    "react-dom": "16.9.0"
+  },
+    "devDependencies": {
+    "autoprefixer": "^9.3.1",
+    "cssnano": "^4.1.7",
+    "postcss-easy-import": "^3.0.0",
+    "tailwindcss": "^0.7.2"
   }
 }
