--- a/package.json
+++ b/package.json
@@ -8,15 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.4.2",
+    "@material-ui/icons": "^4.4.1",
     "@zeit/next-css": "^1.0.1",
     "next": "9.0.5",
     "react": "16.9.0",
     "react-dom": "16.9.0"
   },
-    "devDependencies": {
+  "devDependencies": {
     "autoprefixer": "^9.3.1",
     "cssnano": "^4.1.7",
+    "file-loader": "^4.2.0",
     "postcss-easy-import": "^3.0.0",
+    "react-inlinesvg": "^1.1.6",
+    "svg-inline-loader": "^0.8.0",
     "tailwindcss": "^0.7.2"
   }
 }
