--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "next-compose-plugins": "^2.2.0",
-    "next-images": "^1.1.2"
+    "next-images": "^1.1.2",
+    "nextjs-redirect": "^1.0.2"
   },
   "eslintConfig": {
     "extends": "react-app"
