--- a/package.json
+++ b/package.json
@@ -8,33 +8,38 @@
     "start": "next start"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.11",
     "@material-ui/core": "^4.3.3",
     "@material-ui/icons": "^4.2.1",
+    "@material-ui/pickers": "^3.2.6",
     "classnames": "^2.2.6",
+    "date-fns": "^2.0.0-beta.5",
     "next": "^9.0.5",
     "next-compose-plugins": "^2.2.0",
     "next-images": "^1.1.2",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "react-icons": "^3.7.0"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
   "devDependencies": {
-    "file-loader": "^4.2.0",
-    "react-inlinesvg": "^1.1.6",
-    "svg-inline-loader": "^0.8.0",
-    "next-compose-plugins": "^2.2.0",
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
     "@zeit/next-css": "^1.0.1",
-    "next-images": "^1.1.2",
-    "next": "9.0.5",
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
     "autoprefixer": "^9.3.1",
     "cssnano": "^4.1.7",
+    "file-loader": "^4.2.0",
+    "next": "9.0.5",
+    "next-compose-plugins": "^2.2.0",
+    "next-images": "^1.1.2",
     "postcss-easy-import": "^3.0.0",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-fontawesome": "^1.6.1",
+    "react-inlinesvg": "^1.1.6",
+    "svg-inline-loader": "^0.8.0",
     "tailwindcss": "^0.7.2"
   }
 }
