--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
   },
   "dependencies": {
     "@date-io/date-fns": "^1.3.11",
-    "@material-ui/pickers": "^3.2.6",
-    "date-fns": "^2.0.0-beta.5",
-    "next": "^9.0.7",
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
+    "@material-ui/pickers": "^3.2.6",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
+    "date-fns": "^2.0.0-beta.5",
     "isomorphic-unfetch": "^3.0.0",
+    "next": "^9.0.7",
     "next-compose-plugins": "^2.2.0",
     "next-images": "^1.1.2",
+    "query-string": "^6.8.3",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-icons": "^3.7.0",
@@ -32,10 +33,10 @@
     "autoprefixer": "^9.3.1",
     "cssnano": "^4.1.7",
     "file-loader": "^4.2.0",
-    "react-fontawesome": "^1.6.1",
     "next-compose-plugins": "^2.2.0",
     "next-images": "^1.1.2",
     "postcss-easy-import": "^3.0.0",
+    "react-fontawesome": "^1.6.1",
     "react-inlinesvg": "^1.1.6",
     "svg-inline-loader": "^0.8.0",
     "tailwindcss": "^0.7.2"
